--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <title>UsedHomeFurn</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Crimson+Pro:wght@400;500;800&display=swap" rel="stylesheet">
+    <title>Furniture</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
